force-app/main/default/objects/Apttus_Config2__ProductConstraintEntry__c/Apttus_Config2__ProductConstraintEntry__c.object-meta.xml
<CustomObject>
    <description>Represents a single entry in a product constraint</description>
    <label>Product Constraint Entry</label>
    <nameField>
        <displayFormat>CE-{0000000000}</displayFormat>
        <label>Constraint Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Constraint Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>