force-app/main/default/objects/Apttus_Config2__ProductConstraintEntry__c/fields/Apttus_Config2__ExcludeProductGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExcludeProductGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product group to exclude for selected products or options</description>
    <label>Exclude Product Group</label>
    <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
    <relationshipLabel>Product Constraint Entries (Exclude Product Group)</relationshipLabel>
    <relationshipName>ExcludeProductConstraintEntries</relationshipName>
    <type>Lookup</type>
</CustomField>