force-app/main/default/objects/Apttus_Config2__ProductConstraintEntry__c/fields/Apttus_Config2__ExcludeProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExcludeProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product or option to exclude for selected products or options</description>
    <label>Exclude Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Constraint Entries (Exclude Product)</relationshipLabel>
    <relationshipName>ExcludeProductConstraintEntries</relationshipName>
    <type>Lookup</type>
</CustomField>