force-app/main/default/objects/Apttus_Config2__ProductConstraintEntry__c/fields/Apttus_Config2__IncludeMaxProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncludeMaxProducts__c</fullName>
    <description>The maximum number of products that may be included from the list of products. Setting the maximum products constrains the number of products the user can include from the list of products.</description>
    <label>Include Max Products</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>