force-app/main/default/objects/Apttus_Config2__ProductConstraintEntry__c/fields/Apttus_Config2__IncludeMinProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncludeMinProducts__c</fullName>
    <description>The minimum number of products that must be included from the list of products. Setting the minimum products to greater than 0 means the user is required to include a product from the list products. This creates an &quot;inclusion&quot; rule. Setting the minimum products to 0 means the user is not required to include a product from the list of products.</description>
    <label>Include Min Products</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>