force-app/main/default/objects/Apttus_Config2__ProductConstraintEntry__c/fields/Apttus_Config2__IncludeMinQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncludeMinQuantity__c</fullName>
    <description>The minimum quantity of the product to include</description>
    <label>Include Min Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>