force-app/main/default/objects/Apttus_Config2__ProductConstraintEntry__c/fields/Apttus_Config2__IncludeProductGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncludeProductGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product group to include for selected products or options</description>
    <label>Include Product Group</label>
    <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
    <relationshipLabel>Product Constraint Entries (Include Product Group)</relationshipLabel>
    <relationshipName>IncludeProductConstraintEntries</relationshipName>
    <type>Lookup</type>
</CustomField>