force-app/main/default/objects/Apttus_Config2__ProductConstraintEntry__c/fields/Apttus_Config2__ProductConstraintId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductConstraintId__c</fullName>
    <description>ID of the associated constraint</description>
    <label>Product Constraint</label>
    <referenceTo>Apttus_Config2__ProductConstraint__c</referenceTo>
    <relationshipLabel>Constraint Entries</relationshipLabel>
    <relationshipName>ConstraintEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>