force-app/main/default/objects/Apttus_Config2__ProductConstraintEntry__c/fields/Apttus_Config2__SelectedProduct1Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SelectedProduct1Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the selected product or option</description>
    <label>Selected Product 1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Constraint Entries (Selected Product 1)</relationshipLabel>
    <relationshipName>SelectedProductContraintEntries1</relationshipName>
    <type>Lookup</type>
</CustomField>