force-app/main/default/objects/Apttus_Config2__ProductConstraintEntry__c/fields/Apttus_Config2__SelectedProduct2Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SelectedProduct2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the selected product or option</description>
    <label>Selected Product 2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Constraint Entries (Selected Product 2)</relationshipLabel>
    <relationshipName>SelectedProductContraintEntries2</relationshipName>
    <type>Lookup</type>
</CustomField>