force-app/main/default/objects/Apttus_Config2__ProductConstraintEntry__c/fields/Apttus_Config2__SelectedProduct3Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SelectedProduct3Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the selected product or option</description>
    <label>Selected Product 3</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Constraint Entries (Selected Product 3)</relationshipLabel>
    <relationshipName>SelectedProductContraintEntries3</relationshipName>
    <type>Lookup</type>
</CustomField>