force-app/main/default/objects/Apttus_Config2__ProductConstraintEntry__c/fields/Apttus_Config2__SelectedProductCategory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SelectedProductCategory__c</fullName>
    <description>The selected product category</description>
    <label>Selected Product Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>